--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,75 @@
-<p>home works!</p>
+<main id="main" class="light bg">
+  <div class="container">
+
+    <!-- Header Home -->
+    <div class="main-header">
+      <div class="search-country light">
+        <form action="" class="search-country-form">
+          <div class="entry">
+            <button class="search-btn light">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="ionicon"
+                viewBox="0 0 512 512"
+              >
+                <title>Search</title>
+                <path
+                  d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-miterlimit="10"
+                  stroke-width="32"
+                />
+                <path
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-miterlimit="10"
+                  stroke-width="32"
+                  d="M338.29 338.29L448 448"
+                />
+              </svg>
+            </button>
+            <input
+              type="text"
+              placeholder="Search for a country"
+              class="light"
+            />
+          </div>
+        </form>
+      </div>
+
+      <div class="filter">
+        <button class="filter-btn light" (click)="activeFilterMenu($event)">
+          <span>Filter by region</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="ionicon"
+            viewBox="0 0 512 512"
+          >
+            <title>Chevron Down</title>
+            <path
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="48"
+              d="M112 184l144 144 144-144"
+            />
+          </svg>
+        </button>
+
+        <ul class="filter-menu light">
+          <li class="filter-menu-item" *ngFor="let filter of regionFilter">
+            <button class="filter-menu-btn">{{ filter }}</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Content Countries -->
+    <div class="content">
+      
+    </div>
+  </div>
+</main>
