--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    margin-bottom: 30px;
 
     .search-country {
       border-radius: 4px;
@@ -114,6 +115,14 @@
           }
         }
       }
+    }
+  }
+
+  .content {
+    &-countries {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 30px;
     }
   }
 }
